Rework css stylings

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <head>
 <title>Chicken Ramen Recipe</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="../styles.css">
 
 </head>
 <body>
