--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <meta charset="utf-8">
 <head>
 <title>Odin Recipes</title>
+<link rel="stylesheet" href="styles.css">
 
 
 
 </head>
+<div>
 <body>
 <h1>Odin Recipes</h1>
-<a href="recipes/sushi.html">Dragon Roll Recipe</a>
-<a href="recipes/ramen.html">Chicken Ramen Recipe</a>
-<a href="recipes/tonkatsu.html">Pork Tonkatsu Recipe</a>
+<p><a href="recipes/sushi.html">Dragon Roll Recipe</a></p>
+<p><a href="recipes/ramen.html">Chicken Ramen Recipe</a></p>
+<p><a href="recipes/tonkatsu.html">Pork Tonkatsu Recipe</a></p>
 
 
 </body>
-
+</div>
 
 
 
