--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -4,7 +4,7 @@
 
 <head>
 <title>Sushi Recipe</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="../styles.css">
 
 
 
